--- a/sylosys.html
+++ b/sylosys.html
@@ -80,6 +80,14 @@
     </section>
     <!-- banner starts  -->
 
+
+    <!-- floating img -->
+    <div class="banner-floating-img">
+        <img src="images/sylosis/sylosis-floating.png" class="img-fluid" alt="">
+    </div>
+    <!-- floating img -->
+
+
     <!-- about sylosis -->
     <section class="about-sylosis">
         <div class="container">
