--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                 <li class="partner-item"><img src="images/partners/vtep-logo.png" alt=""></li>
                 <li class="partner-item"><img src="images/partners/garcia-grain.png" alt=""></li>
                 <li class="partner-item"><img src="images/partners/Tame-logo.png" alt=""></li>
-                <li class="partner-item"><img src="images/partners/hyperledger.png" alt=""></li>
+                <!-- <li class="partner-item"><img src="images/partners/hyperledger.png" alt=""></li> -->
                 <li class="partner-item"><img src="images/partners/geaps.png" alt=""></li>
-                <li class="partner-item"><img src="images/partners/Linux-foundation.png" alt=""></li>
+                <!-- <li class="partner-item"><img src="images/partners/Linux-foundation.png" alt=""></li> -->
                 <li class="partner-item"><img src="images/partners/medici-ventures.png" alt=""></li>
                 <li class="partner-item"><img src="images/partners/texas-farm.png" alt=""></li>
             </ul>
@@ -432,8 +432,7 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
-                        href="#">Dwolla Terms of Service</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
