--- a/blockchain.html
+++ b/blockchain.html
@@ -404,8 +404,7 @@
 
         <!-- copyright -->
         <div class="copyright">
-            <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a> - <a
-                    href="#">Dwolla Terms of Service</a></p>
+            <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
         </div>
         <!-- copyright -->
     </div>
