--- a/harvx.html
+++ b/harvx.html
@@ -334,7 +334,7 @@
                         <div class="col-md-4">
                             <div
                                 class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay0-5s">
-                                <img class="img-fluid" src="images/buyers/seed-audit-icons.png" alt="">
+                                <img class="img-fluid" src="images/buyers/seedaudit-icon.png" alt="">
                                 <p><strong>Seed Audit</strong> is our preharvest management solution, which securely
                                     records
                                     and tracks all data from seed to harvest. This data feeds into Trumodity and SiloSys
@@ -356,12 +356,11 @@
                         <div class="col-md-4">
                             <div
                                 class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay0-5s">
-                                <img class="img-fluid" src="images/buyers/harvex-icon.png" alt="">
-                                <p><strong>HarvX</strong> is our logistics platform that facilitates efficient pickup
-                                    and
-                                    delivery of commodities from harvest to grain elevator to buyers. The movement of
-                                    inventory into and out of facilities can be fully tracked through SiloSys and
-                                    Trumodity.
+                                <img class="img-fluid" src="images/buyers/silosys-icon.png" alt="">
+                                <p><strong>SiloSys</strong>  is our inventory management platform that securely records
+                                    and tracks commodity data from farm to grain elevator to buyer. Data from Trumodity and
+                                    Silosys feeds into the blockchain to ensure security, transparency and
+                                    accountability.
                                 </p>
                             </div>
                         </div>
