--- a/producer.html
+++ b/producer.html
@@ -254,7 +254,7 @@
                                 recorded and stored on the cloud on an immutable blockchain
                             </li>
                         </ul>
-                        <a class="btn bg-blue text-white mt-3" href="sylosys.html">Learn More About Sylosis</a>
+                        <a class="btn bg-blue text-white mt-3" href="silosys.html">Learn More About Sylosis</a>
                     </div>
                 </div>
             </div>
