--- a/silosys.html
+++ b/silosys.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Products-Grain Chain</title>
-
-
+    <title>SiloSys-Grain Chain</title>
+    
     <!-- favicons ========== -->
     <link rel="shortcut icon" href="images/favicon/favicon.ico">
     <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
 
+
     <!-- bootrap cdn -->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -63,167 +64,161 @@
     </header>
 
     <!-- header ends her -->
-    <section class="banner banner-2 banner-products bg-transparent">
+
+    <!-- banner starts  -->
+    <section class="banner banner-sylosis banner-2 bg-transparent">
         <div class="container-inner">
             <div class="banner-content">
-                <h1 class="title text-white bottom bottom-center  wow animate__animated animate__fadeInUp"><span>Our
-                        Products</span>
-                </h1>
-                <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">Technology Driven
-                    Solutions to the Biggest Challenges Facing the Global Agricultural Supply-Chain.
-                </p>
-                <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay0-5s"
+                <img class="title-image img-fluid  wow animate__animated animate__fadeInUp"
+                    src="images/sylosis/banner-title-img.png" alt="">
+                <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">Inventory Management
+                    Solution </p>
+                <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay-1s"
                     id="banner-enquiry">Book a Demo</button>
             </div>
         </div>
     </section>
-    <section class="banner-floating animate__animated animate__fadeInUp animate__delay0-5s">
-        <div class="container-inner">
-            <img class="img-fluid" src="images/products/floating--images.png" alt="">
-        </div>
-    </section>
-
-    <!-- seed audit -->
-    <section class="main-product-info product-seed-audit">
-        <div class="container-inner">
-            <div class="row  align-items-center">
-                <div class="col-md-6">
-                    <img class="img-fluid desktop-hide wow animate__animated animate__fadeInLeft"
-                        src="images/products/seed-mobile.png" alt="">
-                    <div class="left">
-                        <img class="logo-img img-fluid mb-5 animate__animated animate__fadeInUp"
-                            src="images/products/seed-logo-png.png" alt="">
-                        <p class="wow animate__animated animate__fadeInUp animate__delay0-5s"><strong>Seed
-                                Audit</strong>
-                            brings the efficiency, transparency and reliability of our
-                            postharvest solutions to
-                            the preharvest process. All data from seed to harvest (seed receipts, fertilizers, geofenced
-                            crop maps, etc) is recorded and tracked securely through our solution, while also allowing
-                            for
-                            audits and certification.</p>
-                        <div class="action animate__animated animate__fadeInUp animate__delay0-5s">
-                            <a href="seed-audit.html" class="btn bg-light-green text-white">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 ">
-                    <div class="right wow animate__animated animate__fadeInUp"> <img class="img-fluid display-img"
-                            src="images/products/mobile-product.png" alt=""></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- seed audit -->
+    <!-- banner starts  -->
 
 
-    <!-- trudmodity -->
-    <img class="img-fluid desktop-hide" src="images/products/bg-pattern-1.png" alt="">
-    <section class="main-product-info product-trumodity">
+    <!-- floating img -->
+    <div class="banner-floating-img">
+        <img src="images/sylosis/sylosis-floating.png" class="img-fluid" alt="">
+    </div>
+    <!-- floating img -->
+
+
+    <!-- about sylosis -->
+    <section class="about-sylosis">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-md-6">
-                    <div class="left wow animate__animated animate__fadeInLeft">
-                        <img class="img-fluid desktop-hide" src="images/products/trumodity-mobile.png" alt="">
-                        <img class="img-fluid  display-img" src="images/products/computer-product.png" alt="">
+                    <div class="about-sylosis-content">
+                        <img src="images/sylosis/section-title-img.png" alt=""
+                            class="title-img img-fluid  wow animate__animated animate__fadeInUp">
+                        <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s"><strong>SiloSys</strong>
+                            is an IoT and blockchain-enabled inventory management system for
+                            producers and storage operators. It digitizes and automates all business processes and
+                            operations, eliminating manual data input and providing reliable inventory and accounting
+                            records. The SiloSys mobile app is an extension of the desktop application which has already
+                            successfully processed billions of pounds of commodities and has been in use by hundreds of
+                            farmers since 2013. </p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="right">
-                        <img class="logo-img img-fluid mb-5 wow animate__animated animate__fadeInUp"
-                            src="images/products/trumodity-logo-png.png" alt="">
-                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>Trumodity</strong> is
-                            GrainChain's comprehensive transaction platform for the
-                            agricultural industry. Trumodity facilitates prompt payment to producers and suppliers and
-                            the
-                            immediate availability of tradable commodities to buyers. It attacks fraud and corruption
-                            through certification and accountability while streamlining procedures that burden the
-                            marketplace and its participants. Trumodity's innovative blockchain architecture creates a
-                            secure, immutable record of commodity data and transactions along the entire supply chain.
-                        </p>
-                        <div class="action wow animate__animated animate__fadeInUp animate__delay0-5s">
-                            <a href="trumodity.html" class="btn bg-yellow text-white">Learn More</a>
-                        </div>
-                    </div>
+                    <img src="images/sylosis/computer.png" alt=""
+                        class="display-img img-fluid  wow animate__animated animate__fadeInRight animate__delay0-5s">
                 </div>
 
             </div>
         </div>
     </section>
-    <img class="img-fluid desktop-hide" src="images/products/bg-patter-2.png" alt="">
 
-    <!-- trumodity -->
 
-    <!-- silosys -->
-    <section class="main-product-info product-silosys">
+    <!-- sylosis process -->
+    <section class="sylosis-process">
+
+        <!-- shape img -->
+        <img class="img-fluid desktop-hide" src="images/sylosis/bg-shape-1.png" alt="">
+        <!-- shape img -->
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <img class="img-fluid desktop-hide" src="images/products/sylosiys-mobiel.png" alt="">
-                    <div class="left  wow animate__animated animate__fadeInUp"><img class="logo-img img-fluid mb-5"
-                            src="images/products/silosys-logo-png.png" alt="">
-                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>SiloSys</strong> is a
-                            cloud-based contract and inventory management system for
-                            Producers and grain elevators. It digitizes and automates all business processes and
-                            operations,
-                            eliminating manual data input and providing reliable inventory and accounting records. The
-                            system communicates directly with scales and scientific instruments to ensure the data
-                            entered
-                            is accurate. All data is stored securely on the blockchain along with the records from
-                            Trumodity.</p>
-                        <div class="action animate__animated animate__fadeInUp animate__delay0-5s">
-                            <a href="silosys.html" class="btn bg-blue text-white">Learn More</a>
-                        </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="process-box  wow animate__animated animate__fadeInUp">
+                        <img src="images/sylosis/icon-1.png" alt="">
+                        <h4>Producers</h4>
+                        <p>Take control of your business by knowing exactly what you have, where it is, the quality of
+                            your harvest.</p>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="right wow animate__animated animate__fadeInRight ">
-                        <img class="img-fluid  display-img" src="images/products/dashboard-procut.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- sylosys -->
+                <div class="col-md-4">
+                    <div class="process-box  wow animate__animated animate__fadeInUp">
+                        <img src="images/sylosis/icon-2.png" alt="">
+                        <h4>Elevators</h4>
+                        <p>SiloSys communicates directly with scales and scientific instruments to ensure that the data
+                            entered is accurate and reliable.</p>
 
-    <!-- harvx -->
-    <img class="desktop-hide img-fluid" src="images/products/bg-pattern-4.png" alt="">
-
-    <section class="main-product-info product-harvx">
-        <div class="container-inner">
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <div class="left wow animate__animated animate__fadeInLeft">
-                        <img class="img-fluid desktop-hide" src="images/products/harvex-mobile.png" alt="">
-                        <img class="img-fluid  display-img" src="images/products/multiple-mobile-product.png" alt="">
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="right">
-                        <img class="logo-img img-fluid mb-5  animate__animated animate__fadeInUp"
-                            src="images/products/harvx-logo-png.png" alt="">
-                        <p class=" animate__animated animate__fadeInUp animate__delay0-5s"><strong>HarvX</strong>
-                            makes logistics easy by connecting drivers and producers directly. Producers can schedule
-                            pickup and delivery when they need it, as well as guide drivers through their farms directly
-                            to the harvest location. Drivers can accept jobs, schedule future jobs and receive payments
-                            all from their mobile app. Facilities like grain elevators and silos can also track and
-                            manage drop offs easily through the mobile app. HarvX adds yet another layer of security,
-                            efficiency and accountability to the GrainChain suite of products.
-                        </p>
-                        <div class="action wow  animate__animated animate__fadeInUp animate__delay0-5s">
-                            <a href="harvx.html" class="btn bg-red text-white">Learn More</a>
-                        </div>
+                <div class="col-md-4">
+                    <div class="process-box  wow animate__animated animate__fadeInUp">
+                        <img src="images/sylosis/icon-3.png" alt="">
+                        <h4>Buyers</h4>
+                        <p>Buyers can view the commodity they bought, both quantity and quality, in real time.</p>
                     </div>
                 </div>
 
             </div>
         </div>
-        <a class="bottom-cta-btn btn bg-green text-white  animate__animated animate__fadeInUp animate__delay-2s"><span>Learn
-                more about how GrainChain’s innovative suite of products works together to solve the problems facing the
-                agribusiness supply chain.</span> <img src="images/buyers/arrow-product.png" alt=""></a>
+        <img class="img-fluid desktop-hide" src="images/sylosis/bg-shape-2.png" alt="">
     </section>
-    <img class="desktop-hide img-fluid" src="images/products/bg-pattern-3.png" alt="">
+    <!-- sylosis process -->
 
-    <!-- harvx -->
+
+
+    <img class="w-100 img-fluid mobile-hide" src="images/trumodity/bg-shape-1.png" alt="">
+    <!-- product-details -->
+
+    <div class="product-details product-details-2 sylosis-product-details">
+        <div class="title-image-wrapper title-image-wrapper-2  wow animate__animated animate__fadeInUp ">
+            <img src="images/sylosis/sylosis-icon.png" alt="">
+        </div>
+        <h2 class="title orange small bottom bottom-center font-weight-bold   wow animate__animated animate__fadeInUp">
+            <span><strong>SiloSys</strong> is part of <strong>GrainChain’s suite of products</strong> that together
+                improve transparency,
+                reliability and efficiency throughout the commodities market.</span></h2>
+        <div class="product-details-inner">
+            <div class="container">
+                <!-- product list  -->
+                <div class="product-list">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div
+                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay-1s">
+                                <img class="img-fluid" src="images/buyers/seedaudit-icon.png" alt="">
+                                <p><strong>Seed Audit</strong> is our preharvest management solution, which securely
+                                    records
+                                    and tracks all data from seed to harvest. This data feeds into Trumodity and SiloSys
+                                    to
+                                    add a new level of traceability, efficiency and transparency to the supply chain.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div
+                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay-1s">
+                                <img class="img-fluid" src="images/buyers/trumodity-icon.png" alt="">
+                                <p><strong>Trumodity</strong> facilitates smart contracts between Producers and buyers
+                                    and ensures accurate, real-time tracking of commodities throughout the supply chain.
+                                    It ensures prompt payment for Producers and immediate transfer of ownership f
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div
+                                class="product-details-box text-center   wow animate__animated animate__fadeInUp animate__delay-1s">
+                                <img class="img-fluid" src="images/buyers/harvX-icon.png" alt="">
+                                <p><strong>HarvX</strong> is our logistics platform that facilitates efficient pickup
+                                    and
+                                    delivery of commodities from harvest to grain elevator to buyers. The movement of
+                                    inventory into and out of facilities can be fully tracked through SiloSys and
+                                    Trumodity.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="action   wow animate__animated animate__fadeInUp animate__delay1-2s">
+            <a class="btn bg-green text-white" href="products.html"><span>Learn more about how GrainChain’s innovative
+                    suite
+                    of products works together to solve the problems facing the agribusiness supply
+                    chain.</span><img src="images/buyers/arrow-product.png" alt=""></a>
+        </div>
+    </div>
 
 
     <!-- home contact -->
