--- a/solutions.html
+++ b/solutions.html
@@ -403,7 +403,7 @@
                 </div>
             </a>
 
-            <a href="sylosys.html" class="benefits-box   wow animate__animated animate__fadeInUp animate__delay0-5s">
+            <a href="silosys.html" class="benefits-box   wow animate__animated animate__fadeInUp animate__delay0-5s">
                 <div class="logo-holder">
                     <img src="images/silosys-logo-2.png" alt="">
                 </div>
