--- a/storage.html
+++ b/storage.html
@@ -251,7 +251,7 @@
                                 recorded and stored on the cloud on an immutable blockchain
                             </li>
                         </ul>
-                        <a class="btn bg-blue text-white mt-3" href="sylosys.html">Learn More About SiloSys</a>
+                        <a class="btn bg-blue text-white mt-3" href="silosys.html">Learn More About SiloSys</a>
                     </div>
                 </div>
             </div>
