--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
 
     <!-- header ends her -->
-    <section class="banner">
+    <section class="banner home-banner">
         <div class="container">
             <div class="banner-item-list">
                 <div class="banner-item">
