--- a/trumodity.html
+++ b/trumodity.html
@@ -174,7 +174,7 @@
     <div class="img-wrapper-shape bg-white">
         <img class="w-100 img-fluid desktop-hide" src="images/buyers/gray-shape-3.png" alt="">
     </div>
-    <div class="product-details product-details-2">
+    <div class="product-details product-details-2 trumodity-product-details">
 
 
         <div class="title-image-wrapper">
