--- a/team.html
+++ b/team.html
@@ -178,6 +178,105 @@
     <!-- shape -->
 
 
+  <!-- team member -->
+  <div class="team-member-main board-of-directors">
+    <div class="container">
+        <h2 class="title font-weight-bold  bottom bottom-center  wow animate__animated animate__fadeInUp">
+            <span>Board of Directors</span></h2>
+        <div class="team-member-list">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-4">
+                    <div class="team-member   wow animate__animated animate__fadeInUp">
+                        <img src="images/team/team-member-1.png" class="img-fluid team-member-pic" alt="">
+                        <h4 class="team-member-name">LUIS MACIAS</h4>
+                        <p class="team-member-post">Co-founder & CEO</p>
+                        <button class="btn btn-primary btn-view-more  btn-bio" data-member-id="#luis">bio</button>
+                        <div class="bio-details" id="luis">
+                            Luis is an innovator and entrepreneur that has nearly 20 years of experience designing,
+                            inventing, and implementing technological solutions in the government, agriculture and
+                            insurance sectors. He has spent the last six years focusing on viable agricultural
+                            solutions, where he founded and implemented SiloSys and developed GrainChain’s
+                            transaction platform using smart contracts. He brings an experienced, relentless
+                            commitment to enhancing the performance of business processes and mission-critical
+                            deployments to the team, and his pioneering leadership in the technology and agriculture
+                            sectors ensures that GrainChain will remain the leader in its market space.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="team-member   wow animate__animated animate__fadeInUp">
+                        <img src="images/team/team-member-2.png" class="img-fluid team-member-pic" alt="">
+                        <h4 class="team-member-name">FERNANDO CAMPOS</h4>
+                        <p class="team-member-post">Co-founder & President</p>
+                        <button class="btn btn-primary btn-view-more btn-bio"
+                            data-member-id="#fernando">bio</button>
+                        <div class="bio-details" id="fernando">
+                            Fernando is one of the world’s leading innovators in blockchain technology. An early
+                            advocate of the value of blockchain, Fernando is passionate about developing
+                            applications of blockchain technology that improve quality of life and working
+                            conditions for all people. He brings this passion, as well as over 16 years of
+                            experience in entrepreneurship, startup management, and real estate investment to the
+                            GrainChain team.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="team-member  wow animate__animated animate__fadeInUp">
+                        <img src="images/team/team-member-3.png" class="img-fluid team-member-pic" alt="">
+                        <h4 class="team-member-name">JAIME LOPEZ</h4>
+                        <p class="team-member-post">CO-FOUNDER & CHIEF STRATEGY OFFICER</p>
+                        <button class="btn btn-primary btn-view-more  btn-bio" data-member-id="#Jamie">bio</button>
+                        <div class="bio-details" id="Jaime">
+                            Jaime received a B.A. in Economics from the University of Texas in 2005 and graduated
+                            with honors from the University of Texas School of Law in 2008. He started his legal
+                            career over a decade ago and still practices corporate and business litigation at Millin
+                            & Millin, PLLC. Jaime has also been active with successful companies in a wide variety
+                            of sectors including financial, health care, hospitality, construction, technology and
+                            blockchain, and real estate. He is an active participant on both for-profit and
+                            non-profit boards.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="team-member   wow animate__animated animate__fadeInUp">
+                        <img src="images/team/team-member-4.png" class="img-fluid team-member-pic" alt="">
+                        <h4 class="team-member-name">CARLOS HUGGINGS</h4>
+                        <p class="team-member-post">CO-FOUNDER & CHIEF TECHNOLOGY OFFICER</p>
+                        <button class="btn btn-primary btn-view-more  btn-bio" data-member-id="#carlos">bio</button>
+                        <div class="bio-details" id="carolos">
+                            Carlos has built his career on developing and implementing innovative, cost-effective
+                            software solutions for businesses.
+                            He has worked with over 50 firms worldwide and brings over 20 years of experience as a
+                            full-stack developer and systems architect to the GrainChain team. He serves as the
+                            leading software developer of GrainChain’s transaction platform, and is an invaluable
+                            driver of implementing our solution on the ground.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="team-member   wow animate__animated animate__fadeInUp">
+                        <img src="images/team/team-member-4.png" class="img-fluid team-member-pic" alt="">
+                        <h4 class="team-member-name">CARLOS HUGGINGS</h4>
+                        <p class="team-member-post">CO-FOUNDER & CHIEF TECHNOLOGY OFFICER</p>
+                        <button class="btn btn-primary btn-view-more  btn-bio" data-member-id="#carlos">bio</button>
+                        <div class="bio-details" id="carolos">
+                            Carlos has built his career on developing and implementing innovative, cost-effective
+                            software solutions for businesses.
+                            He has worked with over 50 firms worldwide and brings over 20 years of experience as a
+                            full-stack developer and systems architect to the GrainChain team. He serves as the
+                            leading software developer of GrainChain’s transaction platform, and is an invaluable
+                            driver of implementing our solution on the ground.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- team member -->
+
+
+
     <!-- about grainchain inc -->
     <section class="about-grainchain-inc about-grainchain-inc-team">
         <div class="container-inner">
