--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy-Grain Chain</title>
+    <title>Terms of Service-Grain Chain</title>
 
     <!-- favicons ========== -->
     <link rel="shortcut icon" href="images/favicon/favicon.ico">
